--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,4 +1,5 @@
 {
-  "cssTheme": "Obsidianite",
-  "theme": "obsidian"
+  "cssTheme": "GitHub Theme",
+  "theme": "obsidian",
+  "baseFontSize": 23
 }
